<resources>
	<string name="map_search_hint">Search place here</string>
	<string name="legend_info">Name</string>
	<string name="legend_family">Fish family</string>
	<string name="legend_record">Personal species record</string>
	<string name="legend_world_record">World species record</string>
	<string name="legend_summer">Best summer hour</string>
	<string name="legend_winter">Best winter hour</string>
	<string name="legend_weight">Average catch weight</string>
	<string name="legend_depth">Average catch depth</string>
	<string name="legend_num">Total catches</string>
	<string name="app_store_try_later">An app-store error occurred, please try again</string>
	<string name="app_name" translatable="false">SpearoStats</string>
	<string name="action_settings">Settings</string>
	<string name="close">Close</string>
	<string name="exit">Exit</string>
	<string name="delete_session_entry_alert">Are you sure you want to delete this session?</string>
	<string name="username">Username</string>
	<string name="success_username">Username successfully changed</string>
	<string name="save_username">Change username</string>
	<string name="request_hint">Request new fish</string>
	<string name="request_sent">Your request has been sent. Thank you!</string>
	<string name="request_length">New fish name must be between 5 and 20 characters long</string>
	<string name="no_catch_data">no catch data</string>
	<string name="no_fish_name_selected">Select the species from the auto-complete</string>
	<string name="prof_pic_cannot_change">You cannot change your profile pic</string>
	<string name="select_location">Press and hold to select location</string>
	<string name="pic_cannot_be_added">No picture was added</string>
	<string name="depth">Depth</string>
	<string name="added">added</string>
	<string name="fill_all">Please fill all fields</string>
	<string name="change_profile_pic">click to change</string>
	<string name="weightMetric">Weight Kilos</string>
	<string name="depthMetric">Depth Meters</string>
	<string name="weightImperial">Weight Lbs</string>
	<string name="depthImperial">Depth Feet</string>
	<string name="invalid_length">Invalid username or password length</string>
	<string name="metric_explained">* Metric = kilograms, meters / Imperial = pounds, feet</string>
	<string name="button_sessions">Diary</string>
	<string name="button_stats">Stats</string>
	<string name="button_guns">SpearGuns</string>
	<string name="button_stats_global">Global stats</string>
	<string name="button_map">Places</string>
	<string name="press_for_more">press for more info&#8230;</string>
	<string name="prey">Prey: </string>
	<string name="search_hint">type fish here..</string>
	<string name="click_to_add">Click to add </string>
	<string name="confirm_catches">Please confirm</string>
	<string name="Argyrosomus_regius">Meagre</string>
	<string name="Argyrops_spinifer">Bream, King Soldier</string>
	<string name="Balistes_capriscus">Grey triggerfish</string>
	<string name="Boops_boops">Bogue</string>
	<string name="Conger_conger">Conger eel</string>
	<string name="Dermatolepis_dermatolepis">Bass, Leather</string>
	<string name="Euthynnus_alletteratus">Little Tunny</string>
	<string name="Lophius_piscatorius">Angler</string>
	<string name="Makaira_indica">Marlin, Black</string>
	<string name="Makaira_nigricans">Marlin, Blue</string>
	<string name="Makaira_mazara">Marlin, Blue Indo-Pacific</string>
	<string name="Kajikia_audax">Marlin, Striped</string>
	<string name="Kajikia_albida">Marlin, White</string>
	<string name="Paralabrax_clathratus">Bass, Kelp</string>
	<string name="Seriola_dumerili">Greater Amberjack</string>
	<string name="Seriola_fasciata">Lesser Amberjack</string>
	<string name="Sphyraena_afra">African Barracuda</string>
	<string name="Sphyraena_qenie">Blackfin Barracuda</string>
	<string name="Sphyraena_barracuda">Great Barracuda</string>
	<string name="Sphyraena_argentea">Pacific Barracuda</string>
	<string name="Sphyraena_jello">Pickhandle Barracuda</string>
	<string name="Sphyraena_putnamae">Sawtooth Barracuda</string>
	<string name="Sphyraena_viridensis">Yellowmouth Barracuda</string>
	<string name="Sphyraena_sphyraena">European Barracuda</string>
	<string name="Stereolepis_gigas">Bass, Giant (Black) Sea</string>
	<string name="Scorpaena_scrofa">Scorpionfish</string>
	<string name="Scomberomorus_regalis">Mackerel, Cero</string>
	<string name="Scomberomorus_cavalla">Mackerel, King</string>
	<string name="Scomberomorus_commerson">Mackerel, Narrowbarred Spanish</string>
	<string name="Sciaena_umbra">Brown meagre</string>
	<string name="Salema_porgy">Sarpa salpa, cow bream</string>
	<string name="Spondyliosoma_cantharus">Black seabream</string>
	<string name="Pterois">Lionfish</string>
	<string name="Uranoscopus_scaber">Stargazer</string>
	<string name="Seriolella_brama">Blue Warehou</string>
	<string name="Pomatomus_saltatrix">Bluefish</string>
	<string name="Paristiopterus_labiosus">Boarfish, Giant</string>
	<string name="Mullus">Red mullet</string>
	<string name="Mugil_cephalus">grey mullet (all species)</string>
	<string name="Muraena_helena">Mediterranean moray</string>
	<string name="Morone_saxatilis">Bass, Striped (Wiper)</string>
	<string name="Monotaxis_grandoculis">Bream, Humpnose Big-Eye</string>
	<string name="Mycteroperca_bonaci">Grouper, Black</string>
	<string name="Mycteroperca_xenarcha">Grouper, Broomtail</string>
	<string name="Mycteroperca_microlepis">Grouper, Gag</string>
	<string name="Mycteroperca_acutirostris">Grouper, Comb</string>
	<string name="Mycteroperca_jordani">Grouper, Gulf</string>
	<string name="Mycteroperca_rosacea">Grouper, Leopard</string>
	<string name="Mycteroperca_rubra">Grouper, Mottled</string>
	<string name="Mycteroperca_prionura">Grouper, Sawtail</string>
	<string name="Mycteroperca_venenosa">Grouper, Yellowfin</string>
	<string name="Mycteroperca_interstitialis">Υellowmouth grouper</string>
	<string name="Mycteroperca_phenax">Grouper, Scamp</string>
	<string name="Sarda_sarda">Bonito, Atlantic</string>
	<string name="Sarda_chiliensis">Bonito, Pacific</string>
	<string name="Scorpaenichthys_marmoratus">Cabezon</string>
	<string name="Epinephelus_analogus">Cabrilla, Spotted</string>
	<string name="Ctenopharyngodon_idella">Carp, Grass</string>
	<string name="Ictalurus_furcatus">Catfish, Blue</string>
	<string name="Ictalurus_punctatus">Catfish, Channel</string>
	<string name="Kyphosus_sectatrix">Chub, Bermuda</string>
	<string name="Rachycentron_canadum">Cobia</string>
	<string name="Gadus_morhua">Cod, Atlantic</string>
	<string name="Gadus_macrocephaleus">Cod, Paciific</string>
	<string name="Plectropomus_laevis">Coralgrouper, Blacksaddle</string>
	<string name="Plectropomus_leopardus">Coralgrouper, Leopard</string>
	<string name="Plectropomus_punctatus">Coralgrouper, Marbled</string>
	<string name="Plectropomus_pessuliferus">Coralgrouper, Roving</string>
	<string name="Plectropomus_maculatus">Coralgrouper, Spotted</string>
	<string name="Cynoscion_stolzmanni">Corvina, Yellowtail</string>
	<string name="Dentex_dentex">Dentex, Common</string>
	<string name="Dentex_gibbosus">Dentex, Pink</string>
	<string name="Coryphaena_hippurus">Dolphinfish, Common / Mahi mahi</string>
	<string name="Pogonias_cromis">Drum, Black</string>
	<string name="Lethrinus_olivaceus">Emperor, Long Nose</string>
	<string name="Lethrinus_erythracanthus">Emperor, Orange Spotted</string>
	<string name="Lethrinus_nebulosus">Emperor, Spangled</string>
	<string name="Lethrinus_xanthochilus">Emperor, Yellowlip</string>
	<string name="Paralichthys_brasiliensis">Flounder, Brazilian</string>
	<string name="Platichthys_stellatus">Flounder, Starry</string>
	<string name="Paralichthys_dentatus">Flounder, Summer</string>
	<string name="Lophius_americanus">Goosefish (Monkfish)</string>
	<string name="Epinephelus_fuscoguttatus">Grouper, Brown Marbled</string>
	<string name="Epinephelus_marginatus">Grouper, Dusky</string>
	<string name="Epinephelus_costae">Grouper, Goldblotch</string>
	<string name="Epinephelus_malabaricus">Grouper, Malabar</string>
	<string name="Epinephelus_coioides">Grouper, Orange Spotted</string>
	<string name="Epinephelus_morio">Grouper, Red</string>
	<string name="Epinephelus_adsensionis">Grouper, Rock Hind</string>
	<string name="Epinephelus_posteli">Grouper, Striped-Fin</string>
	<string name="Epinephelus_nigritus">Grouper, Warsaw</string>
	<string name="Epinephelus_multinotatus">Grouper, White Blotched</string>
	<string name="Epinephelus_aeneus">Grouper, White</string>
	<string name="Hippoglossus_hippoglossus">Halibut, Atlantic</string>
	<string name="Paralichthys_californicus">Halibut, California</string>
	<string name="Seriola_rivoliana">Jack, Almaco</string>
	<string name="Caranx_lugubris">Jack, Black</string>
	<string name="Caranx_hippos">Jack, Crevalle</string>
	<string name="Caranx_caninus">Jack, Crevalle, Pacific</string>
	<string name="Caranx_crysos">Blue runner</string>
	<string name="Seriola_peruana">Jack, Fortune</string>
	<string name="Caranx_latus">Jack, Horse-Eye</string>
	<string name="Caranx_fischeri">Jack, Longfin Crevalle</string>
	<string name="Caranx_bartholomaei">Jack, Yellow</string>
	<string name="Lichia_amia">Leerfish</string>
	<string name="Lichia_stella">Leerfish minor</string>
	<string name="Hippoglossus_stenolepis">Halibut, Pacific</string>
	<string name="Umbrina_cirrosa">Shi drum</string>
	<string name="Weever">Weever</string>
	<string name="Sparisoma_cretense">Parrotfish (all species)</string>
	<string name="Pollachius_pollachius">Pollack</string>
	<string name="Pagrus_pagrus">Red porgy, common seabream</string>
	<string name="Pagrus_auratus">Australasian snapper, silver seabream</string>
	<string name="Oblada_melanura">Saddled seabream</string>
	<string name="Dicentrarchus_labrax">Seabass, European</string>
	<string name="Sparus_aurata">Seabream, Gilthead</string>
	<string name="Diplodus_puntazzo">Sharpsnout Seabream</string>
	<string name="Diplodus_sargus">Sargo, white seabream</string>
	<string name="Diplodus_vulgaris">Two-banded seabream</string>
	<string name="Lithognathus_mormyrus">Sand steenbras</string>
	<string name="Zeus_faber">John Dory, Peter\'s Fish</string>
	<string name="Symphodus_melops">Corkwing wrasse</string>
	<string name="Phycis_phycis">Forkbeard</string>
	<string name="Polyprion_americanus">Atlantic wreckfish</string>
	<string name="Lutjanus_Dentatus" translatable="false">Snapper, African Brown</string>
	<string name="Lutjanus_agennes" translatable="false">Snapper, African Red</string>
	<string name="Lutjanus_cyanopterus" translatable="false">Snapper, Atlantic Cubera</string>
	<string name="Macolor_niger" translatable="false">Snapper, Black and White</string>
	<string name="Lutjanus_colorado" translatable="false">Snapper, Colorado</string>
	<string name="Lutjanus_jocu" translatable="false">Snapper, Dog</string>
	<string name="Lutjanus_sebae" translatable="false">Snapper, Emperor Red</string>
	<string name="Lutjanus_goreensis" translatable="false">Snapper, Gorean</string>
	<string name="Lutjanus_griseus" translatable="false">Snapper, Gray (Mangrove)</string>
	<string name="Lutjanus_griseus_cyanopterus_hybird" translatable="false">Snapper, Gray x Cubera hybrid</string>
	<string name="Lutjanus_sanguineus" translatable="false">Snapper, Humphead</string>
	<string name="Hoplopagrus_guentheri" translatable="false">Snapper, Mexican Barred</string>
	<string name="Macolor_macularis" translatable="false">Snapper, Midnight</string>
	<string name="add_catch">Add fish</string>
	<string name="fola">Bummer! No fish</string>
	<string name="username_hint">desired username</string>
	<string name="cancel_session_entry">Cancel and exit</string>
	<string name="email_us">email us</string>
	<string name="textview_what_fish_question">What fish did you catch?</string>
	<string name="complete_session_or_add_fish">Save or add more fish?</string>
	<string name="add_one_more_catch" >Add more fish</string>
</resources>