<?xml version="1.0" encoding="utf-8"?>
     <RelativeLayout    
        xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/four">
    
         <TextView 
             android:layout_alignParentTop="true"
             android:padding="@dimen/four"
             android:gravity="center"
             android:maxLines="2"
             android:ellipsize="end"
             android:layout_width="match_parent"
             android:layout_height="@dimen/standard_view_height"
             android:id="@+id/textview_session_date_location"
             android:textColor="@color/white_back"
             />

         <gr.liakos.spearo.application.ClearableAutoCompleteTextView 
             android:layout_below="@+id/textview_session_date_location"
             android:layout_marginBottom="@dimen/eight"
			 android:layout_gravity="center_vertical"
			 android:layout_width="match_parent"
			 android:layout_height="@dimen/standard_view_height"
			  android:hint="@string/search_hint"
			  android:textSize="@dimen/fifteen_sp"
			  android:id="@+id/auto_complete_fish"
			  android:lineSpacingExtra="3dp"
			  android:background="@drawable/edit_text_back"
			  android:dropDownWidth="match_parent"
			  android:singleLine="true"
			  android:ellipsize="end"
			  android:padding="@dimen/four"
                                />
         
        <include android:id="@+id/pickers"
            android:layout_below="@+id/auto_complete_fish"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 layout="@layout/number_pickers"/>
        
        
        <RelativeLayout
             android:layout_below="@+id/pickers"
             android:id="@+id/spinnerLayout"
             android:layout_marginBottom="@dimen/eight"
    	android:layout_width="match_parent"
    	android:layout_height="@dimen/standard_view_height"
    	android:background="@drawable/spinner_border"
    	android:orientation="horizontal">

    <Spinner
        android:id="@+id/spinnerCatchTime"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_view_height"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"
        android:spinnerMode="dropdown" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:src="@drawable/drop" />

</RelativeLayout>

        <Button
            android:layout_below="@+id/spinnerLayout"
               style="@style/buttonStyle"
    	     android:drawableStart="@drawable/hook"
    	     android:paddingStart="@dimen/thirty"
    	     android:paddingEnd="@dimen/twenty"
    	     android:drawablePadding="@dimen/four"
    	    android:gravity="center"
			android:textStyle="bold"
			android:maxLines="1"
                android:layout_width="match_parent"
                android:text="@string/add_catch"
                android:id="@+id/button_add_to_basket"
                />
        
       <com.google.android.gms.ads.AdView
	    android:layout_above="@+id/layout_insert_buttons"
	    xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/adViewNewSession"
                ads:adSize="BANNER"
                ads:adUnitId="@string/adId_frg_sessions_banner_layout"
                />   
        
         <LinearLayout  
             android:layout_marginTop="@dimen/four"
             android:id="@+id/layout_insert_buttons"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content">
    	 <Button
                style="@style/buttonStyleTall"
                android:text="@string/cancel_session_entry"
    	     	android:drawableStart="@drawable/cancel_60"
                android:layout_width="@dimen/zero"
                android:layout_weight="1"
                android:paddingStart="@dimen/eight"
                android:paddingEnd="@dimen/four"
                android:id="@+id/button_cancel"
                android:layout_marginEnd="@dimen/four"
                /> 
                
    	 <Button
                style="@style/buttonStyleTall"
    	     android:drawableStart="@drawable/save_60"
    	     android:drawablePadding="@dimen/four"
    	     android:paddingStart="@dimen/twelve"
                android:layout_width="@dimen/zero"
                android:layout_weight="2"
                android:id="@+id/button_checkout_basket"
                />

    	 	 </LinearLayout>
       
    </RelativeLayout>